--- a/.github/workflows/amd64_linux.yml
+++ b/.github/workflows/amd64_linux.yml
@@ -20,6 +20,10 @@ jobs:
       BUILD_TYPE: ${{ matrix.build[1] }}
     steps:
     - uses: actions/checkout@v3
+    - name: Install SDL
+      run: |
+        sudo apt-get update -q
+        sudo apt-get install -y libsdl1.2-dev libsdl-image1.2-dev
     - name: Install Ninja
       run: |
         sudo apt-get update
